examples/istio-gateway-resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hubble-ui
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: https
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: hubble-ui
    namespace: istio-system
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
